--- a/glide.yaml
+++ b/glide.yaml
@@ -25,3 +25,8 @@ import:
 - package: gopkg.in/mattes/go-expand-tilde.v1
   version: cb884138e64c9a8bf5c7d6106d74b0fca082df0c
 - package: github.com/xeipuuv/gojsonschema
+- package: gopkg.in/gemnasium/logrus-airbrake-hook.v2
+  version: ~2.1.1
+- package: gopkg.in/airbrake/gobrake.v2
+  version: ~3.0.1
+- package: github.com/stretchr/objx
